Added log component and integrated it

--- a/src/app/albums/albums.component.html
+++ b/src/app/albums/albums.component.html
@@ -20,7 +20,7 @@
       </label>
       <input
         id="image-title"
-        class="add-image-form-input"
+        class="add-image-form-input-success"
         type="text"
         formControlName="imageTitle"
       />
@@ -28,7 +28,7 @@
       <label for="image-url" class="add-image-form-label">Image URL: </label>
       <input
         id="image-url"
-        class="add-image-form-input"
+        class="add-image-form-input-success"
         type="text"
         formControlName="imageUrl"
       />
