--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
 <div class="root">
   <mat-toolbar class="toolbar">
     <a class="homeIcon" routerLink="/">RIDANGO</a>
+    <a class="activityLog" routerLink="/logs">ACTIVITY LOG</a>
   </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
