--- a/src/app/albums/albums.component.css
+++ b/src/app/albums/albums.component.css
@@ -52,8 +52,14 @@
     padding: 8px;
 }
 
-.add-image-form-input {
+.add-image-form-input-success {
     padding: 8px;
+    margin: 8px;
+}
+
+.add-image-form-input-error {
+    padding: 8px;
+    border-color: red;
     margin: 8px;
 }
 
@@ -72,7 +78,7 @@
     .add-image-button-common {
         margin: 8px 0;
     }
-    .add-image-form-input {
+    .add-image-form-input-success {
         padding: 4px;
         margin: 4px;
     }
